--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ title, stylesheets, scripts, googlefonts. -->
    <li class='active'><a href='weddings.html' class="transition">Weddings</a>
       <ul>
          <li><a href='policies.html' class="transition">Policies</a></li>
-         <li><a href='features.html' class="transition">Features &amp; Amenities</a></li>
+         <li><a href='features.html' class="transition">Amenities</a></li>
          <li><a href='vendors.html' class="transition">Vendors</a></li>
          <li><a href='gallery.html' class="transition">Gallery</a></li>
       </ul>
@@ -79,12 +79,37 @@ title, stylesheets, scripts, googlefonts. -->
 </ul>
 </div>
 
+<div class="container">
 <div class ="hero">
 <img class =" heroimg" src = 'img/HomePhoto.jpg'>
 </div>
 
+<div class="wrapper1">
 
+<h1>Welcome to the Rural Hill Cultural Center</h1>
+<h2>A rural and charming event venue with modern amenities.</h3><br>
+* note: add horizontal rule here
+<br>
+<br>
+This beautiful structure is inspired by the lofty barns, pastoral landscapes,
+and golden sunsets that once dotted North Carolina's rural landscape, blending into our
+surrounding 265 acre farmland in a graceful manner. The Rural Hill Cultural Center and
+and farm offers a unique combination of flexible indoor and outdoor spaces for a variety
+of gatherings, weddings, receptions, reunions, cultural &amp; educational programs, business
+retreats and more!<br><br>
 
+With more than 4,000 square feet the Rural Hill Cultural Center features 2,000 square feet
+in the charming May Davidson Hall, a Scottish Heritage Library, catering kitchen, aptly appointed
+restrooms, audio/visual amenities, spacious covered patio and more.
+
+We invite you to come see how Rural Hill can provide the perfect setting for you and your guests.
+
+* note: add horizontal rule here
+<br><br>
+<br>
+* note: tell us more about your inquiry button (link to lauren's email)*
+</div>
+</div> <!--end container-->
 <!--end body -->
 
 </html>
