--- a/index.html
+++ b/index.html
@@ -50,8 +50,9 @@ title, stylesheets, scripts, googlefonts. -->
 <!-- begin body -->
 
 <div id="logo">
-  <a href="index.html"><img class="logo" src="img/Blue_Logo.svg"></a>
+  <a href="index.html"><img class="logo" src="img/Logo.svg"></a>
   <h3>Historic Rural Hill</h3>
+  <h3>Cultural Center</h3>
   <h4>4431 Neck Road</h4>
   <h4>Huntersville, NC 28078</h4><br>
 </div>
@@ -69,7 +70,7 @@ title, stylesheets, scripts, googlefonts. -->
    <li class='active'><a href='weddings.html' class="transition">Weddings</a>
       <ul>
          <li><a href='policies.html' class="transition">Policies</a></li>
-         <li><a href='features.html' class="transition">Amenities</a></li>
+         <li><a href='amenities.html' class="transition">Amenities</a></li>
          <li><a href='vendors.html' class="transition">Vendors</a></li>
          <li><a href='gallery.html' class="transition">Gallery</a></li>
       </ul>
@@ -84,31 +85,49 @@ title, stylesheets, scripts, googlefonts. -->
 <img class =" heroimg" src = 'img/HomePhoto.jpg'>
 </div>
 
-<div class="wrapper1">
-
-<h1>Welcome to the Rural Hill Cultural Center</h1>
-<h2>A rural and charming event venue with modern amenities.</h3><br>
-* note: add horizontal rule here
+<div class="welcome1">
 <br>
-<br>
-This beautiful structure is inspired by the lofty barns, pastoral landscapes,
-and golden sunsets that once dotted North Carolina's rural landscape, blending into our
-surrounding 265 acre farmland in a graceful manner. The Rural Hill Cultural Center and
-and farm offers a unique combination of flexible indoor and outdoor spaces for a variety
-of gatherings, weddings, receptions, reunions, cultural &amp; educational programs, business
-retreats and more!<br><br>
+<h1>Welcome</h1><br>
+<h2>A rural and charming event venue with modern amenities</h2><BR><BR>
+<!--<hr class= "footer-rule"><br>--></DIV>
 
-With more than 4,000 square feet the Rural Hill Cultural Center features 2,000 square feet
-in the charming May Davidson Hall, a Scottish Heritage Library, catering kitchen, aptly appointed
-restrooms, audio/visual amenities, spacious covered patio and more.
 
-We invite you to come see how Rural Hill can provide the perfect setting for you and your guests.
+<div class="leftwrap1">
+<p>Host your event at the new Historic Rural Hill Cultural Center!
+This beautiful structure is inspired by the lofty barns that once dotted the area’s rural landscape, blending into our surrounding 265 acre farmland in a graceful manner. The Rural Hill Cultural Center and farm offers a unique combination of flexible indoor and outdoor spaces for a variety of gatherings
 
-* note: add horizontal rule here
-<br><br>
-<br>
-* note: tell us more about your inquiry button (link to lauren's email)*
+•	weddings,
+•	receptions,
+•	reunions,
+•	cultural & educational programs,
+•	business retreats
+...and your event!
+
+With more than 4,000 square feet the Rural Hill Cultural Center features 2,000sf in the charming May Davidson Hall, a Scottish Heritage Library, catering kitchen, aptly appointed restrooms, audio/visual amenities, spacious covered patio and more.
+
+We invite you to come see how Rural Hill can provide the perfect setting for you and your guests. Contact us today to schedule a personal tour and site visit: 704-875-3113/ Lauren@ruralhill.net.</p></div>
+<div class="rightwrap1"></div>
+<div class="footer">
+<hr class= "footer-rule"><br>
+<a href="index.html">Historic Rural Hill Cultural Center</a> |
+<a href="info.html">Information</a> |
+<a href="directions.html">Directions</a> |
+<a href="vendors.html">Vendors</a> |
+<a href="contact.html">Contact</a> |
+<a href="weddings.html">Weddings</a> |
+<a href="policies.html">Policies</a> |
+<a href="amenities.html">Amenities</a> |
+<a href="vendors.html">Vendors</a> |
+<a href="gallery.html">Gallery</a> |
+<a href="meet_events.html">Meetings &AMP; Events</a> |
+<a href="http://www.ruralhill.net/">Historic Rural Hill &amp; Cultural Center Main Site</a> |
+<a href="http://www.ruralhillscottishfestivals.net/Historic">Rural Hill Scottish Festival and Highland Games</a> |
+<a href="http://www.ncbrewersandmusic.com/">North Carolina Brewers and Music Festival</a> |
+<a href="http://www.ruralhill.net/SheepdogTrials.asp">Rural Hill Sheepdog Trials &amp; Dog Festival</a> |
+<a href="http://www.ruralhill.net/AmazingMaizeMaze.asp">Rural Hill Amazing Maize Maze</a><br><br>
+<hr class= "footer-rule"><br>
 </div>
+
 </div> <!--end container-->
 <!--end body -->
 
