--- a/index.html
+++ b/index.html
@@ -93,8 +93,10 @@ title, stylesheets, scripts, googlefonts. -->
 
 
 <div class="leftwrap1">
-<p>Host your event at the new Historic Rural Hill Cultural Center!
-This beautiful structure is inspired by the lofty barns that once dotted the area’s rural landscape, blending into our surrounding 265 acre farmland in a graceful manner. The Rural Hill Cultural Center and farm offers a unique combination of flexible indoor and outdoor spaces for a variety of gatherings
+<p>Host your event at the new Historic Rural Hill Cultural Center!<br><br>
+This beautiful structure is inspired by the lofty barns that once dotted the area’s rural landscape,
+ blending into our surrounding 265 acre farmland in a graceful manner. The Rural Hill Cultural Center
+ and farm offers a unique combination of flexible indoor and outdoor spaces for a variety of gatherings
 
 •	weddings,
 •	receptions,
@@ -102,10 +104,10 @@ This beautiful structure is inspired by the lofty barns that once dotted the are
 •	cultural & educational programs,
 •	business retreats
 ...and your event!
-
+<br><br>
 With more than 4,000 square feet the Rural Hill Cultural Center features 2,000sf in the charming May Davidson Hall, a Scottish Heritage Library, catering kitchen, aptly appointed restrooms, audio/visual amenities, spacious covered patio and more.
-
-We invite you to come see how Rural Hill can provide the perfect setting for you and your guests. Contact us today to schedule a personal tour and site visit: 704-875-3113/ Lauren@ruralhill.net.</p></div>
+<br><br>
+We invite you to come see how Rural Hill can provide the perfect setting for you and your guests. Contact us today to schedule a personal tour and site visit</P></div>
 <div class="rightwrap1"></div>
 <div class="footer">
 <hr class= "footer-rule"><br>
