--- a/index.html
+++ b/index.html
@@ -109,6 +109,8 @@ With more than 4,000 square feet the Rural Hill Cultural Center features 2,000sf
 <br><br>
 We invite you to come see how Rural Hill can provide the perfect setting for you and your guests. Contact us today to schedule a personal tour and site visit</P></div>
 <div class="rightwrap1"></div>
+<div class="rightwrap1"></div>
+<div class="rightwrap1"></div>
 <div class="footer">
 <hr class= "footer-rule"><br>
 <a href="index.html">Historic Rural Hill Cultural Center</a> |
