--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@ This beautiful structure is inspired by the lofty barns that once dotted the are
 With more than 4,000 square feet the Rural Hill Cultural Center features 2,000sf in the charming May Davidson Hall, a Scottish Heritage Library, catering kitchen, aptly appointed restrooms, audio/visual amenities, spacious covered patio and more.
 <br><br>
 We invite you to come see how Rural Hill can provide the perfect setting for you and your guests. Contact us today to schedule a personal tour and site visit</P></div>
-<div class="rightwrap1"></div>
-<div class="rightwrap1"></div>
-<div class="rightwrap1"></div>
+<div class="rightwrap1">note -Centuries old magnolias (LEARN MORE -> AMENITIES)</div>
+<div class="rightwrap1">note -Historical landscape of North Carolina (LEARN MORE -> HISTORY)</div>
+<div class="rightwrap1">note-Pastoral Landscapes, etc, etc, (SEE MORE -> GALLERY)</div>
 <div class="footer">
 <hr class= "footer-rule"><br>
 <a href="index.html">Historic Rural Hill Cultural Center</a> |
@@ -130,10 +130,14 @@ We invite you to come see how Rural Hill can provide the perfect setting for you
 <a href="http://www.ruralhill.net/SheepdogTrials.asp">Rural Hill Sheepdog Trials &amp; Dog Festival</a> |
 <a href="http://www.ruralhill.net/AmazingMaizeMaze.asp">Rural Hill Amazing Maize Maze</a><br><br>
 <hr class= "footer-rule"><br>
+
 </div>
 
-</div> <!--end container-->
 <!--end body -->
+<div class = "social-footer">SOCIAL MEDIA LINKS HERE<br>
+  &copy; RURAL HILL CULTURAL CENTER 2017<br><br>
+  <span style="font-size: 0.3em">SITE DESIGN &amp; DEVELOPMENT <A HREF="erinbmccarthy.com">Erin McCarthy Creative</a></span></div>
 
+</div> <!--end container-->
 </html>
 <!--end html-->
